Switched to Yarn & Upgraded Next.js

--- a/posts/2022-03-04-february-check-in.mdx
+++ b/posts/2022-03-04-february-check-in.mdx
@@ -34,9 +34,7 @@ I ended up really just spending a lot of evenings on the couch with my wife watc
 
 **Reading**:
 
--   <a href="https://bookshop.org/books/the-apollo-murders-9781668601075/9780316264532" target="_blank" rel="noreferrer nofollow">
-        The Apollo Murders
-    </a> - I enjoyed this book. It had a good story that pulled you in. As a space fan, I definitely enjoyed the tie-ins with the Apollo program. The ending
+-   <a href="https://bookshop.org/books/the-apollo-murders-9781668601075/9780316264532" target="_blank" rel="noreferrer nofollow">The Apollo Murders</a> - I enjoyed this book. It had a good story that pulled you in. As a space fan, I definitely enjoyed the tie-ins with the Apollo program. The ending
     wasn't my favorite part, but it did tidy up the story arcs. Would still recommend it to anyone.
 
 **Writing**: Wrote my first technical post of the year.
@@ -45,14 +43,8 @@ I ended up really just spending a lot of evenings on the couch with my wife watc
 
 **Gaming** - Continued my Halo series play-through.
 
--   <a href="https://www.xbox.com/en-us/games/store/halo-the-master-chief-collection/9ntm9hxnlszx" target="_blank" rel="noreferrer nofollow">
-        Halo 3
-    </a> - I have obviously already played the heck out of this game, but played through it again for my Halo series play-through.
--   <a href="https://www.xbox.com/en-us/games/store/halo-the-master-chief-collection/9ntm9hxnlszx" target="_blank" rel="noreferrer nofollow">
-        Halo 3: ODST
-    </a> - This is the only Halo shooter I never beat. I got bored with it when it first came out, but wasn't gonna let that stop me this time. Finally
+-   <a href="https://www.xbox.com/en-us/games/store/halo-the-master-chief-collection/9ntm9hxnlszx" target="_blank" rel="noreferrer nofollow">Halo 3</a> - I have obviously already played the heck out of this game, but played through it again for my Halo series play-through.
+-   <a href="https://www.xbox.com/en-us/games/store/halo-the-master-chief-collection/9ntm9hxnlszx" target="_blank" rel="noreferrer nofollow">Halo 3: ODST</a> - This is the only Halo shooter I never beat. I got bored with it when it first came out, but wasn't gonna let that stop me this time. Finally
     beat it and it does provide a nice little side-story to go along with the Master Chief Saga
--   <a href="https://www.xbox.com/en-us/games/store/halo-the-master-chief-collection/9ntm9hxnlszx" target="_blank" rel="noreferrer nofollow">
-        Halo 4
-    </a> - Played through this, again for my Halo series play-through. It was the first game done by 343 Studios and as I remembered, the story didn't
+-   <a href="https://www.xbox.com/en-us/games/store/halo-the-master-chief-collection/9ntm9hxnlszx" target="_blank" rel="noreferrer nofollow">Halo 4</a> - Played through this, again for my Halo series play-through. It was the first game done by 343 Studios and as I remembered, the story didn't
     quite feel the same as the original trilogy.
