--- a/posts/2022-04-06-march-check-in.mdx
+++ b/posts/2022-04-06-march-check-in.mdx
@@ -37,26 +37,16 @@ I put my fitness tracking app on the back burner for the time being and have mov
 
 **Reading**:
 
--   <a href="https://bookshop.org/books/nudge-the-final-edition/9780143137009" target="_blank" rel="noreferrer nofollow">
-        Nudge
-    </a> - This was a fantastic read into how we as humans can be persuaded into doing things in ways we don't always recognize. The authors do a good
+-   <a href="https://bookshop.org/books/nudge-the-final-edition/9780143137009" target="_blank" rel="noreferrer nofollow">Nudge</a> - This was a fantastic read into how we as humans can be persuaded into doing things in ways we don't always recognize. The authors do a good
     job going into the good and bad of it.
--   <a href="https://bookshop.org/books/the-storyteller-tales-of-life-and-music/9780063076099" target="_blank" rel="noreferrer nofollow">
-        The Storyteller: Tales of Life and Music
-    </a> - Dave Grohl has always seemed to be an interesting and unique person. This was an interesting memoir talking about his growth from High School
+-   <a href="https://bookshop.org/books/the-storyteller-tales-of-life-and-music/9780063076099" target="_blank" rel="noreferrer nofollow">The Storyteller: Tales of Life and Music</a> - Dave Grohl has always seemed to be an interesting and unique person. This was an interesting memoir talking about his growth from High School
     punk musician, through Nirvana and eventually Foo Fighters. If you're a fan of any of his work, I'd highly recommend this.
--   <a href="https://bookshop.org/books/it-s-better-to-be-feared-the-new-england-patriots-dynasty-and-the-pursuit-of-greatness/9781631498237" target="_blank" rel="noreferrer nofollow">
-        It's Better to Be Feared: The New England Patriots Dynasty and the Pursuit of Greatness
-    </a> - I'm by no means a Patriots fan, but I found this to be an interesting look into the 2 decades long dynasty of Brady-Belichick and the Patriots.
+-   <a href="https://bookshop.org/books/it-s-better-to-be-feared-the-new-england-patriots-dynasty-and-the-pursuit-of-greatness/9781631498237" target="_blank" rel="noreferrer nofollow">It's Better to Be Feared: The New England Patriots Dynasty and the Pursuit of Greatness</a> - I'm by no means a Patriots fan, but I found this to be an interesting look into the 2 decades long dynasty of Brady-Belichick and the Patriots.
 
 **Writing**: Nada
 
 **Gaming** - Continued my Halo series play-through.
 
--   <a href="https://www.xbox.com/en-us/games/store/Halo-5-Guardians/BRRC2BP0G9P0" target="_blank" rel="noreferrer nofollow">
-        Halo 5: Guardians
-    </a> - I beat this before and the story is probably the worst of all the Halo games. The battles are fun though.
--   <a href="https://www.xbox.com/en-us/games/store/halo-the-master-chief-collection/9ntm9hxnlszx" target="_blank" rel="noreferrer nofollow">
-        Halo: Infinite
-    </a> - Finally got to start the new Halo campaign. The open world aspect of it is a branch from the other games. At some points it has almost become
+-   <a href="https://www.xbox.com/en-us/games/store/Halo-5-Guardians/BRRC2BP0G9P0" target="_blank" rel="noreferrer nofollow">Halo 5: Guardians</a> - I beat this before and the story is probably the worst of all the Halo games. The battles are fun though.
+-   <a href="https://www.xbox.com/en-us/games/store/halo-the-master-chief-collection/9ntm9hxnlszx" target="_blank" rel="noreferrer nofollow">Halo: Infinite</a> - Finally got to start the new Halo campaign. The open world aspect of it is a branch from the other games. At some points it has almost become
     like Skyrim for me...putting off the main story to do all the side quests. The battles so far have been fun, Hunters are the bain of my existence.
