Added Television Watch List Page
- Added a page for the TV I’ve watched
- Updated Movies Page
- Removed Email

Closes #191

--- a/posts/2021-02-03-unit-testing-with-msw.mdx
+++ b/posts/2021-02-03-unit-testing-with-msw.mdx
@@ -53,7 +53,7 @@ const handlers = [
                     ctx.json({
                         id: userId,
                         name: 'Keith Wagner',
-                        email: 'keith@kpwags.com',
+                        email: 'testing@testing.comm',
                     }),
                 );
             }
@@ -74,7 +74,7 @@ const handlers = [
                 user: {
                     id: 1,
                     name: 'Keith Wagner',
-                    email: 'keith@kpwags.com',
+                    email: 'testing@testing.comm',
                 },
             }),
         ),
