Moved Comments to New Repository
Closes #285

--- a/posts/2021-08-25-running-a-531-lifting-routine.mdx
+++ b/posts/2021-08-25-running-a-531-lifting-routine.mdx
@@ -4,6 +4,7 @@ date: '2021-08-25'
 description: "I've switched to using a 5/3/1 routine"
 tags: [{ name: 'Fitness', url: 'fitness' }, { name: 'Lifting', url: 'lifting' }, { name: 'Strength Training', url: 'strength-training' }]
 excerpt: "Earlier this year, I posted about how I was tweaking my workout to a 6 day program. That routine worked well for me, but then hockey started back up and I wasn't able to keep up. A new routine was in order, and I chose to build one based on Jim Wendler's 5/3/1 BBB (Boring But Big) program."
+commentIssueNumber: 2
 ---
 
 Earlier this year, I posted about how I was tweaking my workout to a [6 day program](/2021/01/28/tweaking-my-lifting-routine.html). That routine worked well for me, but then hockey started back up and I wasn't able to keep up. A new routine was in order, and I chose to build one based on [Jim Wendler's 5/3/1 BBB (Boring But Big)](https://www.jimwendler.com/blogs/jimwendler-com/101077382-boring-but-big) program.
