--- a/posts/2021-09-04-on-software-subscriptions.mdx
+++ b/posts/2021-09-04-on-software-subscriptions.mdx
@@ -4,6 +4,7 @@ date: '2021-09-04'
 description: "One of the things that has started to bug me of late is that it's getting harder and harder to simply 'buy' software."
 tags: [{ name: 'Thoughts', url: 'thoughts' }, { name: 'Software', url: 'software' }]
 excerpt: "One of the things that has started to bug me of late is that it's getting harder and harder to simply 'buy' software. I mean we've always been at the mercy of companies with their license agreements and sometimes DRM, but now it's starting to feel even worse."
+commentIssueNumber: 3
 ---
 
 One of the things that has started to bug me of late is that it's getting harder and harder to simply "buy" software. I mean we've always been at the mercy of companies with their license agreements and sometimes DRM, but now it's starting to feel even worse.
