Added October Check-In & Updated Content

--- a/posts/2022-10-14-reading-log-october-14-1.mdx
+++ b/posts/2022-10-14-reading-log-october-14-1.mdx
@@ -2,6 +2,7 @@
 title: 'Reading Log - October 14 (#1)'
 date: '2022-10-14'
 tags: [
+    { name: 'Reading Log', url: 'reading-log' },
     { name: 'CSS', url: 'css' },
     { name: '.NET', url: 'dotnet' },
     { name: 'Unit Testing', url: 'unit-testing' },
