--- a/posts/2022-10-21-reading-log-october-21-2.mdx
+++ b/posts/2022-10-21-reading-log-october-21-2.mdx
@@ -2,6 +2,7 @@
 title: 'Reading Log - October 21 (#2)'
 date: '2022-10-21'
 tags: [
+    { name: 'Reading Log', url: 'reading-log' },
     { name: 'CSS', url: 'css' },
     { name: 'Javascript', url: 'javscript' },
     { name: '.NET', url: 'dotnet' },
