--- a/posts/2022-10-28-reading-log-october-28-3.mdx
+++ b/posts/2022-10-28-reading-log-october-28-3.mdx
@@ -2,6 +2,7 @@
 title: 'Reading Log - October 28 (#3)'
 date: '2022-10-28'
 tags: [
+    { name: 'Reading Log', url: 'reading-log' },
     { name: 'CSS', url: 'css' },
     { name: 'Javascript', url: 'javscript' },
     { name: '.NET', url: 'dotnet' },
