--- a/posts/2022-11-04-reading-log-november-4-4.mdx
+++ b/posts/2022-11-04-reading-log-november-4-4.mdx
@@ -2,6 +2,7 @@
 title: 'Reading Log - November 4 (#4)'
 date: '2022-11-04'
 tags: [
+    { name: 'Reading Log', url: 'reading-log' },
     { name: 'CSS', url: 'css' },
     { name: 'TypeScript', url: 'typescript' },
     { name: '.NET', url: 'dotnet' },
