--- a/posts/2022-11-11-reading-log-november-11-5.mdx
+++ b/posts/2022-11-11-reading-log-november-11-5.mdx
@@ -23,7 +23,7 @@ The Twitter drama is never ending. Microsoft has also released .NET 7 and C# 11!
     title="Mario flipped off Twitter for nearly two hours with the blessing of Musk's 'verification'"
     url="https://www.theverge.com/2022/11/9/23450289/twitter-impersonators-official-mario-musk-jesus-valve"
 >
-    All this Twitter drama is like a train wreck in slow motion. I just can't look away. So many of the mistakes Elon as made since he took over were predicted by just about everyone. This feels so much like them shooting themselves in the foot. It's definitely only solidified my decision to leave Twitter. I'm keeping my Twitter account active to keep my username. I'm alsp not going to say that I'll never go back, but it would have to change ownership and have a competent CEO for me re-consider.
+    All this Twitter drama is like a train wreck in slow motion. I just can't look away. So many of the mistakes Elon as made since he took over were predicted by just about everyone. This feels so much like them shooting themselves in the foot. It's definitely only solidified my decision to leave Twitter. I'm keeping my Twitter account active to keep my username. I'm also not going to say that I'll never go back, but it would have to change ownership and have a competent CEO for me re-consider.
 </InDepthNotes>
 
 ## Link Blast
@@ -94,3 +94,7 @@ The Twitter drama is never ending. Microsoft has also released .NET 7 and C# 11!
     id="WXTVDUYIZs8"
     title="Margot and the Nuclear So & So's - Broadripple is Burning"
 />
+
+---
+
+*Edited 11/11/22: Typo*
