Removed Empty Gaming Section

--- a/posts/2022-11-11-reading-log-november-11-5.mdx
+++ b/posts/2022-11-11-reading-log-november-11-5.mdx
@@ -48,8 +48,6 @@ The Twitter drama is never ending. Microsoft has also released .NET 7 and C# 11!
 
 [Elon Musk learns the hard way that being a Twitter troll is way more fun than being a mod](https://www.theverge.com/2022/11/11/23451931/elon-musk-twitter-bankrupt-verification-ftc) *(Elizabeth Lopatto)*
 
-<h3 className="text">🎮 Gaming</h3>
-
 <h3 className="text">📈 Business and Finance</h3>
 
 [Crypto giant Binance agrees to buy rival FTX amid 'liquidity crunch'](https://techcrunch.com/2022/11/08/binance-signs-letter-of-intent-to-acquire-ftx/) *(Manish Singh)*
@@ -97,4 +95,4 @@ The Twitter drama is never ending. Microsoft has also released .NET 7 and C# 11!
 
 ---
 
-*Edited 11/11/22: Typo*
+*Edited 11/11/22: Typo & Removed Empty Gaming Section*
