Corrected tags JSON

--- a/posts/2022-12-02-reading-log-december-2-8.mdx
+++ b/posts/2022-12-02-reading-log-december-2-8.mdx
@@ -8,7 +8,7 @@ tags: [
     { name: 'Artemis', url: 'artemis' },
     { name: 'Space', url: 'space' },
     { name: 'Twitter', url: 'twitter' },
-    { name: 'Halo', url: 'halo' },
+    { name: 'Halo', url: 'halo' }
 ]
 commentIssueNumber: 66
 ignoreWordCount: true
