Added November Check-In & Movies Update

--- a/posts/2022-12-02-reading-log-december-2-8.mdx
+++ b/posts/2022-12-02-reading-log-december-2-8.mdx
@@ -2,6 +2,7 @@
 title: 'Reading Log - December 2 (#8)'
 date: '2022-12-02'
 tags: [
+    { name: 'Reading Log', url: 'reading-log' },
     { name: 'CSS', url: 'css' },
     { name: 'Tailwind', url: 'tailwind' },
     { name: 'NASA', url: 'nasa' },
