Improved Stats Logic
Improved the stats logic flow and converted all `reading list` tags to `reading log` for uniformity.

--- a/posts/2019-03-03-reading-list.mdx
+++ b/posts/2019-03-03-reading-list.mdx
@@ -2,7 +2,7 @@
 title: 'Reading List 2/18 - 3/3'
 date: '2019-03-02'
 description: '2 weeks combined this time as I was in NYC last weekend. This week I read about loot boxes, whistle blowing, YouTube conspiracies and more.'
-tags: [{ name: 'Reading List', url: 'reading-list' }]
+tags: [{ name: 'Reading Log', url: 'reading-log' }]
 excerpt: '2 weeks combined this time as I was in NYC last weekend. This week I read about loot boxes, whistle blowing, YouTube conspiracies and more.'
 ---
 
