--- a/posts/2019-08-11-reading-list.mdx
+++ b/posts/2019-08-11-reading-list.mdx
@@ -2,7 +2,7 @@
 title: 'Reading List 8/5 - 8/11'
 date: '2019-08-11'
 description: "I've decided to start the reading list back up again."
-tags: [{ name: 'Reading List', url: 'reading-list' }]
+tags: [{ name: 'Reading Log', url: 'reading-log' }]
 excerpt: "I've decided to start this back up. Some interesting thoughts about making the data social media has on us transferrable, DIY Phone Farms, and a new software development podcast I've found."
 ---
 
