--- a/posts/2022-05-20-reading-list.mdx
+++ b/posts/2022-05-20-reading-list.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Reading List: May 14 - May 20'
 date: '2022-05-20'
-tags: [{ name: 'Reading List', url: 'reading-list' }, { name: 'Software Development', url: 'software-development' }, { name: 'Economics', url: 'economics' }, { name: 'Free Speech', url: 'free-speech' }, { name: 'Work', url: 'work' }]
+tags: [{ name: 'Reading Log', url: 'reading-log' }, { name: 'Software Development', url: 'software-development' }, { name: 'Economics', url: 'economics' }, { name: 'Free Speech', url: 'free-speech' }, { name: 'Work', url: 'work' }]
 contentImage: '2022-05-20-reading-list/content.jpg'
 socialImageUrl: '2022-05-20-reading-list/social-image.jpg'
 socialImageWidth: 1200
