--- a/posts/2022-06-10-reading-list.mdx
+++ b/posts/2022-06-10-reading-list.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Reading List: June 4 - June 10'
 date: '2022-06-10'
-tags: [{ name: 'Reading List', url: 'reading-list' }, { name: '.NET', url: 'dotnet'}, { name: 'Next.js', url: 'nextjs'}, { name: 'WFH', url: 'wfh'}]
+tags: [{ name: 'Reading Log', url: 'reading-log' }, { name: '.NET', url: 'dotnet'}, { name: 'Next.js', url: 'nextjs'}, { name: 'WFH', url: 'wfh'}]
 contentImage: '2022-06-10-reading-list/content.jpg'
 socialImageUrl: '2022-06-10-reading-list/social-image.jpg'
 socialImageWidth: 1200
