--- a/posts/2022-07-15-reading-list.mdx
+++ b/posts/2022-07-15-reading-list.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Reading List: July 9 - July 15'
 date: '2022-07-15'
-tags: [{ name: 'Reading List', url: 'reading-list' }, { name: 'Space', url: 'space'}, { name: 'Remote Work', url: 'remote-work'}, { name: 'Development', url: 'development'}]
+tags: [{ name: 'Reading Log', url: 'reading-log' }, { name: 'Space', url: 'space'}, { name: 'Remote Work', url: 'remote-work'}, { name: 'Development', url: 'development'}]
 contentImage: '2022-07-15-reading-list/content.jpg'
 socialImageUrl: '2022-07-15-reading-list/social-image.jpg'
 socialImageWidth: 1200
