--- a/posts/2022-08-12-reading-list.mdx
+++ b/posts/2022-08-12-reading-list.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Reading List: August 6 - August 12'
 date: '2022-08-12'
-tags: [{ name: 'Reading List', url: 'reading-list' }, { name: '.NET', url: 'dotnet'}, { name: 'Crypto', url: 'crypto'}, { name: 'Comcast', url: 'comcast'}]
+tags: [{ name: 'Reading Log', url: 'reading-log' }, { name: '.NET', url: 'dotnet'}, { name: 'Crypto', url: 'crypto'}, { name: 'Comcast', url: 'comcast'}]
 socialImageUrl: '2022-08-12-reading-list/social-image.jpg'
 socialImageWidth: 1200
 socialImageHeight: 675
