--- a/posts/2019-02-03-reading-list.mdx
+++ b/posts/2019-02-03-reading-list.mdx
@@ -2,7 +2,7 @@
 title: 'Reading List 1/28 - 2/3'
 date: '2019-02-03'
 description: "Another week, another set of articles ranging from Apple's row with Facebook to the future of American infrastructure."
-tags: [{ name: 'Reading List', url: 'reading-list' }]
+tags: [{ name: 'Reading Log', url: 'reading-log' }]
 excerpt: "Another week, another set of articles ranging from Apple's row with Facebook to the future of American infrastructure."
 ---
 
