--- a/posts/2019-03-10-reading-list.mdx
+++ b/posts/2019-03-10-reading-list.mdx
@@ -2,7 +2,7 @@
 title: 'Reading List 3/4 - 3/10'
 date: '2019-03-10'
 description: "Not too long this week. We look at the anti-vaccine movement, a new drug treatment for depression, Facebook's 'supposed' change, and a neat proof of concept for spying."
-tags: [{ name: 'Reading List', url: 'reading-list' }]
+tags: [{ name: 'Reading Log', url: 'reading-log' }]
 excerpt: "Not too long this week. We look at the anti-vaccine movement, a new drug treatment for depression, Facebook's 'supposed' change, and a neat proof of concept for spying."
 ---
 
