--- a/posts/2019-08-18-reading-list.mdx
+++ b/posts/2019-08-18-reading-list.mdx
@@ -2,7 +2,7 @@
 title: 'Reading List 8/12 - 8/18'
 date: '2019-08-18'
 description: 'This week I read about changes in the US Navy, another nuclear accident in Russia, a prank gone wrong, and more.'
-tags: [{ name: 'Reading List', url: 'reading-list' }]
+tags: [{ name: 'Reading Log', url: 'reading-log' }]
 excerpt: 'This week I read about changes in the US Navy, another nuclear accident in Russia, a prank gone wrong, and more.'
 ---
 
