--- a/posts/2019-08-25-reading-list.mdx
+++ b/posts/2019-08-25-reading-list.mdx
@@ -2,7 +2,7 @@
 title: 'Reading List 8/19 - 8/25'
 date: '2019-08-25'
 description: 'This week I read about Javascript, jQuery, terraforming Mars, baseball cards and more.'
-tags: [{ name: 'Reading List', url: 'reading-list' }]
+tags: [{ name: 'Reading Log', url: 'reading-log' }]
 excerpt: 'This week I read about Javascript, jQuery, terraforming Mars, baseball cards and more.'
 ---
 
