--- a/posts/2022-05-27-reading-list.mdx
+++ b/posts/2022-05-27-reading-list.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Reading List: May 21 - May 27'
 date: '2022-05-27'
-tags: [{ name: 'Reading List', url: 'reading-list' }, { name: 'Food', url: 'food' }, { name: 'Social Media', url: 'social-media' }, { name: 'Internet', url: 'internet' }, { name: 'Twitter', url: 'twitter' }, { name: 'Elon Musk', url: 'elon-musk' }]
+tags: [{ name: 'Reading Log', url: 'reading-log' }, { name: 'Food', url: 'food' }, { name: 'Social Media', url: 'social-media' }, { name: 'Internet', url: 'internet' }, { name: 'Twitter', url: 'twitter' }, { name: 'Elon Musk', url: 'elon-musk' }]
 contentImage: '2022-05-27-reading-list/content.jpg'
 socialImageUrl: '2022-05-27-reading-list/social-image.jpg'
 socialImageWidth: 1200
