--- a/posts/2022-06-03-reading-list.mdx
+++ b/posts/2022-06-03-reading-list.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Reading List: May 28 - June 3'
 date: '2022-06-03'
-tags: [{ name: 'Reading List', url: 'reading-list' }, { name: 'CSS', url: 'css'}, { name: 'Git', url: 'git'}, { name: 'Source Control', url: 'source-control'}]
+tags: [{ name: 'Reading Log', url: 'reading-log' }, { name: 'CSS', url: 'css'}, { name: 'Git', url: 'git'}, { name: 'Source Control', url: 'source-control'}]
 contentImage: '2022-06-03-reading-list/content.jpg'
 socialImageUrl: '2022-06-03-reading-list/social-image.jpg'
 socialImageWidth: 1200
