--- a/posts/2022-06-24-reading-list.mdx
+++ b/posts/2022-06-24-reading-list.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Reading List: June 11 - June 24'
 date: '2022-06-24'
-tags: [{ name: 'Reading List', url: 'reading-list' }, { name: 'CSS', url: 'css'}, { name: 'TypeScript', url: 'typescript'}, { name: 'Firefox', url: 'firefox'}, { name: 'Web Browsers', url: 'web-browsers'}]
+tags: [{ name: 'Reading Log', url: 'reading-log' }, { name: 'CSS', url: 'css'}, { name: 'TypeScript', url: 'typescript'}, { name: 'Firefox', url: 'firefox'}, { name: 'Web Browsers', url: 'web-browsers'}]
 contentImage: '2022-06-24-reading-list/content.jpg'
 socialImageUrl: '2022-06-24-reading-list/social-image.jpg'
 socialImageWidth: 1200
