--- a/posts/2022-07-01-reading-list.mdx
+++ b/posts/2022-07-01-reading-list.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Reading List: June 25 - July 1'
 date: '2022-07-01'
-tags: [{ name: 'Reading List', url: 'reading-list' }, { name: 'CSS', url: 'css'}, { name: 'Music', url: 'music'}, { name: 'Apple', url: 'apple'}, { name: 'Web Browsers', url: 'web-browsers'}]
+tags: [{ name: 'Reading Log', url: 'reading-log' }, { name: 'CSS', url: 'css'}, { name: 'Music', url: 'music'}, { name: 'Apple', url: 'apple'}, { name: 'Web Browsers', url: 'web-browsers'}]
 contentImage: '2022-07-01-reading-list/content.jpg'
 socialImageUrl: '2022-07-01-reading-list/social-image.jpg'
 socialImageWidth: 1200
