--- a/posts/2022-07-08-reading-list.mdx
+++ b/posts/2022-07-08-reading-list.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Reading List: July 2 - July 8'
 date: '2022-07-08'
-tags: [{ name: 'Reading List', url: 'reading-list' }, { name: 'CSS', url: 'css'}, { name: 'C#', url: 'csharp'}, { name: 'Crypto', url: 'crypto'}]
+tags: [{ name: 'Reading Log', url: 'reading-log' }, { name: 'CSS', url: 'css'}, { name: 'C#', url: 'csharp'}, { name: 'Crypto', url: 'crypto'}]
 contentImage: '2022-07-08-reading-list/content.jpg'
 socialImageUrl: '2022-07-08-reading-list/social-image.jpg'
 socialImageWidth: 1200
