--- a/posts/2022-07-29-reading-list.mdx
+++ b/posts/2022-07-29-reading-list.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Reading List: July 23 - July 29'
 date: '2022-07-22'
-tags: [{ name: 'Reading List', url: 'reading-list' }, { name: 'C#', url: 'csharp'}, { name: '.NET', url: 'dotnet'}, { name: 'Crypto', url: 'crypto'}, { name: 'Imposter Syndrome', url: 'imposter-syndrome'}]
+tags: [{ name: 'Reading Log', url: 'reading-log' }, { name: 'C#', url: 'csharp'}, { name: '.NET', url: 'dotnet'}, { name: 'Crypto', url: 'crypto'}, { name: 'Imposter Syndrome', url: 'imposter-syndrome'}]
 socialImageUrl: '2022-07-29-reading-list/social-image.jpg'
 socialImageWidth: 1200
 socialImageHeight: 675
