--- a/posts/2022-09-23-reading-list.mdx
+++ b/posts/2022-09-23-reading-list.mdx
@@ -2,7 +2,7 @@
 title: 'Reading List: September 3 - 23'
 date: '2022-09-23'
 tags: [
-    { name: 'Reading List', url: 'reading-list' },
+    { name: 'Reading Log', url: 'reading-log' },
     { name: 'Free Speech', url: 'free-speech'},
     { name: 'Software Development', url: 'software-development' },
     { name: '.NET', url: 'dotnet' },
