Added a little more text

--- a/posts/2023-02-16-luck.mdx
+++ b/posts/2023-02-16-luck.mdx
@@ -20,7 +20,7 @@ I think about how lucky I am that:
 - My Mom was a teacher who could help me with English and literature classes.
 - I grew up never having to worry about food on my plate or a roof over my head.
 
-None of this I had any control over. It just was.
+And this is just a subset of it all. None of this I had any control over. It just was.
 
 This is not to say that those who didn't have what I had growing up couldn't achieve what I have, it just made my journey all that much easier. It also makes it all that much more impressive for those that have had more barriers to break through.
 
