Updated the Code Blocks
Updated the code blocks from Prism to Code Hike

--- a/posts/2019-08-15-continuing-my-side-project-and-learning-react.mdx
+++ b/posts/2019-08-15-continuing-my-side-project-and-learning-react.mdx
@@ -20,7 +20,7 @@ I wrote the code to go through each ingredient and direction, add it to the data
 
 A quick change corrected that problem and all of a sudden, the form worked as expected.
 
-```js
+```javascript
 const directionCreations = formValues.directions.map(async (d) => {
     const direction = await ctx.db.mutation.createDirection(
         {
