--- a/posts/2022-11-08-adding-themes.mdx
+++ b/posts/2022-11-08-adding-themes.mdx
@@ -13,7 +13,7 @@ To accomplish this, I take advantage of CSS variables and local storage. By defa
 
 I have 2 helper functions to help me to do this.
 
-```ts
+```typescript
 export const saveToLocalStorage = (key: string, value: string): void => {
     if (typeof window !== 'undefined') {
         window.localStorage.setItem(key, value);
@@ -89,7 +89,7 @@ You can view the full CSS file [here](https://github.com/kpwags/kpwags.com/blob/
 
 The final piece tying it all together is my `useTheme` hook.
 
-```ts
+```typescript
 interface UseThemeReturn {
     theme: Theme;
     color: ColorTheme;
