Fixed Duplicate Header

--- a/posts/2023-05-02-april-check-in.mdx
+++ b/posts/2023-05-02-april-check-in.mdx
@@ -5,8 +5,6 @@ tags: ['Monthly Check-In', 'Travel', 'Blogging', 'Hockey']
 commentIssueNumber: 103
 ---
 
-# April Check-In
-
 April wasn’t a bad month. I was productive and was able to finish the month with a well deserved long weekend vacation.
 
 ## Reworking My Site
@@ -76,3 +74,7 @@ The latest I-League season at my rink ended this month and my team was able to w
 - [The Shawshank Redemption](https://www.imdb.com/title/tt0111161/)
 - [The Gray Man](https://www.imdb.com/title/tt1649418/)
 - [Inside Man](https://www.imdb.com/title/tt0454848/)
+
+---
+
+*Update 5.2.2023 : Fixed Duplicate Header*
