--- a/reading-logs/34.mdx
+++ b/reading-logs/34.mdx
@@ -5,7 +5,7 @@ tags: ['Reading Log', 'NHL', 'Star Trek', 'CSS', 'ChatGPT', 'Meta', 'NASA', 'Mar
 commentIssueNumber: 121
 ---
 
-Got a lot this week. The NHL and Paramout+ make very poor decisions, some CSS & dev tool tips, Meta's possibly joining ActivityPub and more.
+Got a lot this week. The NHL and Paramount+ make very poor decisions, some CSS & dev tool tips, Meta's possibly joining ActivityPub and more.
 
 ## In Depth
 
