Added Reading Log #35
- Added Reading Log 35
- Updated Titles of Reading Logs to Contain Year
- Updated Now Page to Always Pull from Notion
- Updated 2023 Progress

--- a/reading-logs/10.mdx
+++ b/reading-logs/10.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Reading Log - December 16 (#10)'
+title: 'Reading Log - December 16, 2022 (#10)'
 date: '2022-12-16'
 tags: ['Reading Log', 'Apple', 'Twitter', 'Fusion Energy', 'Microsoft', 'Unit Testing', 'Visual Studio']
 commentIssueNumber: 71
