--- a/reading-logs/11.mdx
+++ b/reading-logs/11.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Reading Log - December 23 (#11)'
+title: 'Reading Log - December 23, 2022 (#11)'
 date: '2022-12-23'
 tags: ['Reading Log', 'Video Games', '.NET', 'C#', 'RSS', 'Twitter', 'Antibiotics', 'Baseball', 'NASA']
 commentIssueNumber: 72
