--- a/reading-logs/15.mdx
+++ b/reading-logs/15.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Reading Log - January 20 (#15)'
+title: 'Reading Log - January 20, 2023 (#15)'
 date: '2023-01-20'
 tags: ['Reading Log', 'Twitter', 'C#', '.NET', 'CSS', 'Unit Testing', 'NASA', 'JWST']
 commentIssueNumber: 81
