--- a/reading-logs/16.mdx
+++ b/reading-logs/16.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Reading Log - January 27 (#16)'
+title: 'Reading Log - January 27, 2023 (#16)'
 date: '2023-01-27'
 tags: ['Reading Log', 'CSS', 'Design', 'Astro', 'Google', 'Mars', 'Neptune', 'Space', 'GoldenEye']
 commentIssueNumber: 82
