--- a/reading-logs/17.mdx
+++ b/reading-logs/17.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Reading Log - February 3 (#17)'
+title: 'Reading Log - February 3, 2023 (#17)'
 date: '2023-02-03 18:45'
 tags: ['Reading Log', 'React', 'TypeScript', '.NET', 'Entity Framework', 'Google', 'Apple', 'Netlify', 'Space']
 commentIssueNumber: 84
