--- a/reading-logs/18.mdx
+++ b/reading-logs/18.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Reading Log - February 10 (#18)'
+title: 'Reading Log - February 10, 2023 (#18)'
 date: '2023-02-10'
 tags: ['Reading Log', 'CSS', 'React', 'JavaScript', 'Google', 'MLB']
 commentIssueNumber: 85
