--- a/reading-logs/2.mdx
+++ b/reading-logs/2.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Reading Log - October 21 (#2)'
+title: 'Reading Log - October 21, 2022 (#2)'
 date: '2022-10-21'
 tags: ['Reading Log', 'CSS', 'JavaScript', '.NET', 'Unit Testing', 'C#', 'JWST', 'Space', 'React', 'Netflix']
 commentIssueNumber: 54
