--- a/reading-logs/20.mdx
+++ b/reading-logs/20.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Reading Log - March 3 (#20)'
+title: 'Reading Log - March 3, 2023 (#20)'
 date: '2023-03-03'
 tags: ['Reading Log', 'Sony', 'Microsoft', 'Blazor', 'C#', '.NET', 'CSS', 'Cybersecurity', 'Apple', 'Star Trek']
 commentIssueNumber: 89
