--- a/reading-logs/22.mdx
+++ b/reading-logs/22.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Reading Log - March 17 (#22)'
+title: 'Reading Log - March 17, 2023 (#22)'
 date: '2023-03-17'
 tags: ['Reading Log', 'JavaScript', '.NET', 'React', 'Git', 'TypeScript', 'Sports Officiating', 'Sports']
 commentIssueNumber: 92
