--- a/reading-logs/23.mdx
+++ b/reading-logs/23.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Reading Log - March 24 (#23)'
+title: 'Reading Log - March 24, 2023 (#23)'
 date: '2023-03-24'
 tags: ['Reading Log', 'Security', 'TypeScript', 'CSS', 'Blazor', '.NET']
 commentIssueNumber: 95
