--- a/reading-logs/24.mdx
+++ b/reading-logs/24.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Reading Log - March 31 (#24)'
+title: 'Reading Log - March 31, 2023 (#24)'
 date: '2023-03-31'
 tags: ['Reading Log', 'C#', 'React', 'CSS', 'Typography']
 commentIssueNumber: 97
