--- a/reading-logs/25.mdx
+++ b/reading-logs/25.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Reading Log - April 7 (#25)'
+title: 'Reading Log - April 7, 2023 (#25)'
 date: '2023-04-07'
 tags: ['Reading Log', 'C#', 'Entity Framework', 'Apple', 'Twitter', 'NPR', 'NASA', 'Space']
 commentIssueNumber: 99
