--- a/reading-logs/26.mdx
+++ b/reading-logs/26.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Reading Log - April 14 (#26)'
+title: 'Reading Log - April 14, 2023 (#26)'
 date: '2023-04-14'
 tags: ['Reading Log', 'CSS', '.NET', 'C#', 'Twitter', 'NPR', 'Halo', 'COVID', 'Libraries']
 commentIssueNumber: 100
