--- a/reading-logs/27.mdx
+++ b/reading-logs/27.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Reading Log - May 5 (#27)'
+title: 'Reading Log - May 5, 2023 (#27)'
 date: '2023-05-05'
 tags: ['Reading Log', 'Microsoft', 'Blazor', 'Next.js', 'Social Media']
 description: "This log we look at the passing of a folk legend, Microsoft reverting to its old ways, Microsoft facing a hurdle in its Activision acquisition, some chatty parrots, and more"
