--- a/reading-logs/28.mdx
+++ b/reading-logs/28.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Reading Log - May 12 (#28)'
+title: 'Reading Log - May 12, 2023 (#28)'
 date: '2023-05-12'
 tags: ['Reading Log', 'Social Media', 'Content Moderation', 'CSS', 'C#', 'Microsoft', 'Electric Vehicles', 'Electric Grid']
 commentIssueNumber: 107
