--- a/reading-logs/29.mdx
+++ b/reading-logs/29.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Reading Log - May 19 (#29)'
+title: 'Reading Log - May 19, 2023 (#29)'
 date: '2023-05-19'
 tags: ['Reading Log', '.NET', 'React', 'C#', 'Twitter', 'Space', 'CSS', 'Section 230', 'Taxes']
 commentIssueNumber: 108
