--- a/reading-logs/30.mdx
+++ b/reading-logs/30.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Reading Log - May 26 (#30)'
+title: 'Reading Log - May 26, 2023 (#30)'
 date: '2023-05-26'
 tags: ['Reading Log', 'Instagram', 'Google', 'TypeScript', 'C#', '.NET', 'Microsoft', 'Titanic']
 commentIssueNumber: 111
