--- a/reading-logs/33.mdx
+++ b/reading-logs/33.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Reading Log - June 23 (#33)'
+title: 'Reading Log - June 23, 2023 (#33)'
 date: '2023-06-23'
 tags: ['Reading Log', 'Reddit', 'JavaScript', 'Microsoft', 'Activision', 'PlayStation', 'Spotify', 'Podcasts']
 commentIssueNumber: 118
