--- a/reading-logs/34.mdx
+++ b/reading-logs/34.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Reading Log - June 30 (#34)'
+title: 'Reading Log - June 30, 2023 (#34)'
 date: '2023-06-30'
 tags: ['Reading Log', 'NHL', 'Star Trek', 'CSS', 'ChatGPT', 'Meta', 'NASA', 'Mars']
 commentIssueNumber: 121
