--- a/reading-logs/5.mdx
+++ b/reading-logs/5.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Reading Log - November 11 (#5)'
+title: 'Reading Log - November 11, 2022 (#5)'
 date: '2022-11-11'
 tags: ['Reading Log', 'C#', '.NET', 'Twitter', 'Crypto', 'Artemis', 'NASA']
 commentIssueNumber: 60
