--- a/reading-logs/7.mdx
+++ b/reading-logs/7.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Reading Log - November 25 (#7)'
+title: 'Reading Log - November 25, 2022 (#7)'
 date: '2022-11-25'
 tags: ['Reading Log', 'ESLint', 'CSS', 'Unit Testing', 'C#', 'Apple', 'NASA', 'Artemis', 'Vaccines']
 commentIssueNumber: 64
