--- a/reading-logs/8.mdx
+++ b/reading-logs/8.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Reading Log - December 2 (#8)'
+title: 'Reading Log - December 2, 2022 (#8)'
 date: '2022-12-02'
 tags: ['Reading Log', 'CSS', 'Tailwind', 'NASA', 'Artemis', 'Space', 'Twitter', 'Halo']
 commentIssueNumber: 66
