--- a/reading-logs/1.mdx
+++ b/reading-logs/1.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Reading Log - October 14 (#1)'
+title: 'Reading Log - October 14, 2022 (#1)'
 date: '2022-10-14'
 tags: ['Reading Log', 'CSS', '.NET', 'Unit Testing', 'Google', 'Climate Change']
 commentIssueNumber: 53
