--- a/reading-logs/12.mdx
+++ b/reading-logs/12.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Reading Log - December 30 (#12)'
+title: 'Reading Log - December 30, 2022 (#12)'
 date: '2022-12-30'
 tags: ['Reading Log', 'Apple', 'Mastodon', 'LastPass', 'CSS', 'Unit Testing', 'Software Testing']
 commentIssueNumber: 75
