--- a/reading-logs/13.mdx
+++ b/reading-logs/13.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Reading Log - January 6 (#13)'
+title: 'Reading Log - January 6, 2023 (#13)'
 date: '2023-01-06'
 tags: ['Reading Log', 'NFL', CSS', 'JavaScript', '.NET', 'LastPass', 'Remote Work']
 commentIssueNumber: 78
