--- a/reading-logs/14.mdx
+++ b/reading-logs/14.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Reading Log - January 13 (#14)'
+title: 'Reading Log - January 13, 2023 (#14)'
 date: '2023-01-13'
 tags: ['Reading Log', 'Star Trek', 'React', 'C#', 'Apple', 'Podcasts', 'Identity Theft', 'Blogging']
 commentIssueNumber: 80
