--- a/reading-logs/19.mdx
+++ b/reading-logs/19.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Reading Log - February 17 (#19)'
+title: 'Reading Log - February 17, 2023 (#19)'
 date: '2023-02-17'
 tags: ['Reading Log']
 commentIssueNumber: 87
