--- a/reading-logs/21.mdx
+++ b/reading-logs/21.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Reading Log - March 10 (#21)'
+title: 'Reading Log - March 10, 2023 (#21)'
 date: '2023-03-10'
 tags: ['Reading Log', 'The Web', 'F#', 'C#', 'SimCity', 'TikTok', 'RSS', 'Free Speech', 'CSS']
 commentIssueNumber: 91
