--- a/reading-logs/3.mdx
+++ b/reading-logs/3.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Reading Log - October 28 (#3)'
+title: 'Reading Log - October 28, 2022 (#3)'
 date: '2022-10-28'
 tags: ['Reading Log', 'CSS', 'JavaScript', '.NET', 'Lego', 'C#', 'Linux', 'Development', 'Next.js', 'Twitter', 'COVID']
 commentIssueNumber: 55
