--- a/reading-logs/31.mdx
+++ b/reading-logs/31.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Reading Log - June 2 (#31)'
+title: 'Reading Log - June 2, 2023 (#31)'
 date: '2023-06-02'
 tags: ['Reading Log', 'Reddit', '.NET', 'AI']
 commentIssueNumber: 112
