--- a/reading-logs/32.mdx
+++ b/reading-logs/32.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Reading Log - June 9 (#32)'
+title: 'Reading Log - June 9, 2023 (#32)'
 date: '2023-06-09'
 tags: ['Reading Log', 'Remote Work', 'Reddit', 'Apple', 'Cats']
 commentIssueNumber: 115
