--- a/reading-logs/4.mdx
+++ b/reading-logs/4.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Reading Log - November 4 (#4)'
+title: 'Reading Log - November 4, 2022 (#4)'
 date: '2022-11-04'
 tags: ['Reading Log', 'CSS', 'TypeScript', '.NET', 'Twitter', 'Web Components']
 commentIssueNumber: 57
