--- a/reading-logs/6.mdx
+++ b/reading-logs/6.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Reading Log - November 18 (#6)'
+title: 'Reading Log - November 18, 2022 (#6)'
 date: '2022-11-18 10:00:00'
 tags: ['Reading Log', '.NET', 'C#', 'NASA', 'CSS', 'Pokemon', 'JWST', 'Crypto']
 commentIssueNumber: 61
