--- a/reading-logs/9.mdx
+++ b/reading-logs/9.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Reading Log - December 9 (#9)'
+title: 'Reading Log - December 9, 2022 (#9)'
 date: '2022-12-09'
 tags: ['Reading Log', 'CSS', 'C#', 'NASA', 'Apollo', 'Space', 'Twitter', 'Microsoft', 'Activision', 'Windows', 'Apple']
 commentIssueNumber: 70
