Added Book Notes Pages & RSS Feeds
- Added a list of my book notes
- Added a book notes RSS feed
- Added social image support for book notes pages

Closes #488
Closes #489
Closes #490

--- a/books/erik-larson-dead-wake.mdx
+++ b/books/erik-larson-dead-wake.mdx
@@ -6,10 +6,9 @@ links: [
     { title: 'Bookshop.org', url: 'https://bookshop.org/p/books/dead-wake-the-last-crossing-of-the-lusitania-erik-larson/7296476?ean=9780307408877' }
 ]
 coverImage: 'https://i.postimg.cc/yN2RYVhj/dead-wake.jpg'
-dateFinished: '2023-08-23'
+dateFinished: '2023-09-01'
 rating: 4
 ---
-
 This book was an interesting read looking at one of the biggest victims of unrestricted submarine warfare. It was also the start of the events that would bring the US into World War I two years later.
 
 The book Bounces between passenger and crew stories from the *Lusitania*, the path of *U-20* and Captain Lieutenant Walther Schwieger, who would sink the *Lusitania*.
@@ -24,7 +23,7 @@ The book also talks about how British Intelligence had broken German codes and w
 
 A naval historian, Patrick Beesley later even pointed this out.
 
-> "As an Englishman and a lover of the Royal Navy," he said, "I would prefer to attribute this failure to negligence, even gross negligence, rather [than] to a conspiracy deliberately to endanger the ship." But, he said, "on the basis of the considerable volume of information which is now available, I am reluctantly compelled to state that on balance, the most likely explanation is that there was indeed a plot, however imperfect, to endanger the *Lusitania* in order to involve the United States in the war." So much was done for the Orion and other warships, he wrote, but nothing for the *Lusitania*. He struggled with this. No matter how he arranged the evidence, he came back to conspiracy."
+> "As an Englishman and a lover of the Royal Navy," he said, "I would prefer to attribute this failure to negligence, even gross negligence, rather than to a conspiracy deliberately to endanger the ship." But, he said, "on the basis of the considerable volume of information which is now available, I am reluctantly compelled to state that on balance, the most likely explanation is that there was indeed a plot, however imperfect, to endanger the *Lusitania* in order to involve the United States in the war." So much was done for the Orion and other warships, he wrote, but nothing for the *Lusitania*. He struggled with this. No matter how he arranged the evidence, he came back to conspiracy."
 
 It caps off what was an absolute tragedy costing the lives of almost 1,200 civilians. Carrying munitions bound for the frontlines on a passenger ship is questionable at best, but the lack of escort, or even actionable warnings being sent to the *Lusitania* after being specifically threatened by Germany should be criminal.
 
